--- a/.gitattributes
+++ b/.gitattributes
@@ -23,6 +23,7 @@
 test/*.js text eol=lf
 CMakeLists.txt text eol=lf
 
-# Keep the LICENCE and VERSION files with LFs to make sure it is uploaded, hashed etc with LF
+# Keep the LICENCE, README, and VERSION files with LFs to make sure it is uploaded, hashed etc with LF
 LICENCE eol=lf
+README eol=lf
 VERSION eol=lf
