--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "environments-doc",
+  "name": "environments",
   "version": "0.0.1",
-  "description": "Documents webpage for 'cmodules/environments'.",
+  "description": "'Environments' is a tool to provide management and control over configuration variables used at runtime, on a per-project/repo scope.",
   "main": "index.js",
   "repository": "https://github.com/cmodules/environments.git",
   "author": "StoneyDSP <nathanjhood@googlemail.com>",
   "license": "MIT",
-  "private": true
+  "private": false,
+  "readme": "https://github.com/cmodules/environments/main/README.md"
 }
